Update generated documentation for version 0.9.5

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>f#rictionless web testing
+    <title>Canopy - f#rictionless web testing
 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A simple framework in f# on top of selenium for writing UI automation and tests.">
@@ -25,6 +25,7 @@
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
           <li><a href="http://fsharp.org">fsharp.org</a></li>
+          <li><a href="http://www.tryfsharp.org/">tryfsharp.org</a></li>
           <li><a href="https://github.com/sergey-tihon/canopy">github page</a></li>
         </ul>
         <h3 class="muted"><a href="/canopy/index.html">canopy</a></h3>
@@ -33,9 +34,7 @@
       <div class="row">
         <div class="span9" id="main">
           
-<h1>f#rictionless web testing</h1>
-
-<p>f#rictionless web testing</p>
+<h1>Canopy - f#rictionless web testing</h1>
 
 <div class="row">
   <div class="span1"></div>
@@ -48,11 +47,14 @@
   <div class="span1"></div>
 </div>
 
-<p>Canopy is a web testing framework with one goal in mind, make UI testing simple:
-<em> Solid stabilization layer built on top of Selenium. Death to "brittle, quirky, UI tests". 
-</em> Quick to learn. Even if you've never done UI Automation, and don't know F#. 
-<em> Clean, consise API. 
-</em> MIT License.</p>
+<p>Canopy is a web testing framework with one goal in mind, make UI testing simple:</p>
+
+<ul>
+<li><p>Solid stabilization layer built on top of Selenium. Death to "brittle, quirky, UI tests".</p></li>
+<li><p>Quick to learn. Even if you've never done UI Automation, and don't know F#.</p></li>
+<li><p>Clean, consise API.</p></li>
+<li><p>MIT License.</p></li>
+</ul>
 
 <h2>Getting Started</h2>
 
@@ -159,10 +161,10 @@
 <img src="img/run.png" alt="Run" style="display: inherit;"/></p></li>
 <li><p>Explore the rest of canopy's api</p>
 <ul>
-<li><a href="">Actions: documentation of everything you can do on a page</a></li>
-<li><a href="">Assertions: all the ways you can verify what's on the page is correct</a></li>
-<li><a href="">Testing: different ways to orchestrate tests and troubleshoot issues with a page</a></li>
-<li><a href="">Reporting: different ways to output the results of your test suite</a></li>
+<li><a href="/canopy/actions.html">Actions</a>: documentation of everything you can do on a page</li>
+<li><a href="/canopy/assertions.html">Assertions</a>: all the ways you can verify what's on the page is correct</li>
+<li><a href="/canopy/testing.html">Testing</a>: different ways to orchestrate tests and troubleshoot issues with a page</li>
+<li><a href="/canopy/reporting.html">Reporting</a>: different ways to output the results of your test suite</li>
 </ul></li>
 </ol>
 
@@ -182,7 +184,7 @@
 
         </div>
         <div class="span3">
-          <img src="/canopy/img/logo.jpg" alt="F# Project" style="width:150px;margin:10px" />  
+          <img src="/canopy/img/logo.jpg" alt="F# Project" style="width:250px;margin:10px" />  
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
             <li class="nav-header">canopy</li>
             <li><a href="/canopy/index.html">Home page</a></li>
@@ -193,10 +195,16 @@
             <li><a href="https://github.com/sergey-tihon/canopy/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
             
             <li class="nav-header">Getting started</li>
-            <li><a href="/canopy/tutorial.html">Sample tutorial</a></li>
+            <li><a href="/canopy/actions.html">Actions</a></li>
+            <li><a href="/canopy/assertions.html">Assertions</a></li>
+            <li><a href="/canopy/testing.html">Testing</a></li>
+            <li><a href="/canopy/reporting.html">Reporting</a></li>
 
             <li class="nav-header">Documentation</li>
             <li><a href="/canopy/reference/index.html">API Reference</a></li>
+
+            <li class="nav-header">Testimonials</li>
+            <li><a href="http://amirrajan.github.com/Oak/">Oak MVC</a></li>
           </ul>
         </div>
       </div>
