Update generated documentation for version 0.9.5

--- a/index.html
+++ b/index.html
@@ -58,15 +58,19 @@
 
 <h2>Getting Started</h2>
 
-<ol>
-<li><p>Create a new F# console application
-<img src="img/newProject.png" alt="F# New Project" style="display: inherit;"/></p></li>
-<li><p>Set target framework to .NET Framework 4
-<img src="img/profile.png" alt="Change target framework" style="display: inherit;"/></p></li>
-<li><p>Install Canopy via Nuget
-<img src="img/installCanopy.png" alt="Install Canopy" style="display: inherit;"/></p></li>
-<li>Paste the following code into <code>Program.fs</code></li>
-</ol>
+<h4>1. Create a new F# console application</h4>
+
+<img src="img/newProject.png" alt="F# New Project" style="display: inherit;"/>
+
+<h4>2. Set target framework to .NET Framework 4</h4>
+
+<img src="img/profile.png" alt="Change target framework" style="display: inherit;"/>
+
+<h4>3. Install Canopy via Nuget</h4>
+
+<img src="img/installCanopy.png" alt="Install Canopy" style="display: inherit;"/>
+
+<h4>4. Paste the following code into <code>Program.fs</code></h4>
 
 <table class="pre"><tr><td class="lines"><pre class="fssnip">
 <span class="l"> 1: </span>
@@ -156,17 +160,18 @@
 </tr>
 </table>
 
-<ol>
-<li><p>Run
-<img src="img/run.png" alt="Run" style="display: inherit;"/></p></li>
-<li><p>Explore the rest of canopy's api</p>
+<h4>5. Run</h4>
+
+<img src="img/run.png" alt="Run" style="display: inherit;"/>
+
+<h4>6. Explore the rest of canopy's api</h4>
+
 <ul>
 <li><a href="/canopy/actions.html">Actions</a>: documentation of everything you can do on a page</li>
 <li><a href="/canopy/assertions.html">Assertions</a>: all the ways you can verify what's on the page is correct</li>
 <li><a href="/canopy/testing.html">Testing</a>: different ways to orchestrate tests and troubleshoot issues with a page</li>
 <li><a href="/canopy/reporting.html">Reporting</a>: different ways to output the results of your test suite</li>
-</ul></li>
-</ol>
+</ul>
 
 <div class="tip" id="fs1">namespace canopy</div>
 <div class="tip" id="fs2">module runner<br /><br />from canopy</div>
