Update generated documentation for version 0.9.5

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 <img src="img/run.png" alt="Run" style="display: inherit;"/>
 
-<h4>6. Explore the rest of canopy's api</h4>
+<h4>6. Explore the rest of Canopy's API</h4>
 
 <ul>
 <li><a href="/canopy/actions.html">Actions</a>: documentation of everything you can do on a page</li>
