--- a/testing.html
+++ b/testing.html
@@ -73,13 +73,11 @@ You can have as many contexts as you like. Each context gets a new once/before/a
 <span class="l">1: </span>
 <span class="l">2: </span>
 <span class="l">3: </span>
-<span class="l">4: </span>
 </pre>
 </td>
 <td class="snippet"><pre class="fssnip">
 <span onmouseout="hideTip(event, 'fs2', 4)" onmouseover="showTip(event, 'fs2', 4)" class="i">once</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span> 
-    <span class="c">//do this one time at the beginning of the most recently defined context</span>
-    ()
+    ()<span class="c">//do this one time at the beginning of the most recently defined context</span>
 )</pre>
 </td>
 </tr>
@@ -93,13 +91,11 @@ You can have as many contexts as you like. Each context gets a new once/before/a
 <span class="l">1: </span>
 <span class="l">2: </span>
 <span class="l">3: </span>
-<span class="l">4: </span>
 </pre>
 </td>
 <td class="snippet"><pre class="fssnip">
 <span onmouseout="hideTip(event, 'fs3', 5)" onmouseover="showTip(event, 'fs3', 5)" class="i">before</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span> 
-    <span class="c">//do this before every test of the most recently defined context</span>
-    ()
+    ()<span class="c">//do this before every test of the most recently defined context</span>
 )</pre>
 </td>
 </tr>
@@ -113,13 +109,11 @@ You can have as many contexts as you like. Each context gets a new once/before/a
 <span class="l">1: </span>
 <span class="l">2: </span>
 <span class="l">3: </span>
-<span class="l">4: </span>
 </pre>
 </td>
 <td class="snippet"><pre class="fssnip">
 <span onmouseout="hideTip(event, 'fs4', 6)" onmouseover="showTip(event, 'fs4', 6)" class="i">after</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span> 
-    <span class="c">//do this after every test of the most recently defined context</span>
-    ()
+    ()<span class="c">//do this after every test of the most recently defined context</span>
 )</pre>
 </td>
 </tr>
@@ -133,13 +127,11 @@ You can have as many contexts as you like. Each context gets a new once/before/a
 <span class="l">1: </span>
 <span class="l">2: </span>
 <span class="l">3: </span>
-<span class="l">4: </span>
 </pre>
 </td>
 <td class="snippet"><pre class="fssnip">
 <span onmouseout="hideTip(event, 'fs5', 7)" onmouseover="showTip(event, 'fs5', 7)" class="i">lastly</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span> 
-    <span class="c">//do this after the very last test of the most recently defined context</span>
-    ()
+    ()<span class="c">//do this after the very last test of the most recently defined context</span>
 )</pre>
 </td>
 </tr>
@@ -186,16 +178,14 @@ You can have as many contexts as you like. Each context gets a new once/before/a
 <span class="l">10: </span>
 <span class="l">11: </span>
 <span class="l">12: </span>
-<span class="l">13: </span>
 </pre>
 </td>
 <td class="snippet"><pre class="fssnip">
-<span class="s">&quot;</span><span class="s">go</span><span class="s"> </span><span class="s">somewhere</span><span class="s">,</span><span class="s"> </span><span class="s">do</span><span class="s"> </span><span class="s">some</span><span class="s"> </span><span class="s">stuff</span><span class="s">,</span><span class="s"> </span><span class="s">assert</span><span class="s">&quot;</span> <span class="o">&amp;&amp;&amp;</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span>
+<span class="s">&quot;</span><span class="s">go</span><span class="s"> </span><span class="s">somewhere</span><span class="s">,</span><span class="s"> </span><span class="s">do</span><span class="s"> </span><span class="s">some</span><span class="s"> </span><span class="s">stuff</span><span class="s">,</span><span class="s"> </span><span class="s">assert</span><span class="s">&quot;</span> <span class="o">&amp;&amp;&amp;</span> <span class="k">fun</span> _ <span class="k">-&gt;</span>
     <span class="c">//go somewhere</span>
     <span class="c">//interact with page</span>
     <span class="c">//assert</span>
     ()
-)
 <span class="c">//Or</span>
 <span onmouseout="hideTip(event, 'fs7', 9)" onmouseover="showTip(event, 'fs7', 9)" class="i">ntest</span> <span class="s">&quot;</span><span class="s">go</span><span class="s"> </span><span class="s">somewhere</span><span class="s">,</span><span class="s"> </span><span class="s">do</span><span class="s"> </span><span class="s">some</span><span class="s"> </span><span class="s">stuff</span><span class="s">,</span><span class="s"> </span><span class="s">assert</span><span class="s">&quot;</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span>
     <span class="c">//go somewhere</span>
@@ -226,17 +216,15 @@ If one test is marked wip, only wip tests are ran. Other tests are skipped.</p>
 <span class="l">11: </span>
 <span class="l">12: </span>
 <span class="l">13: </span>
-<span class="l">14: </span>
 </pre>
 </td>
 <td class="snippet"><pre class="fssnip">
 <span class="c">//this is test is run slow and only with other tests marked as wip</span>
-<span class="s">&quot;</span><span class="s">go</span><span class="s"> </span><span class="s">somewhere</span><span class="s">,</span><span class="s"> </span><span class="s">do</span><span class="s"> </span><span class="s">some</span><span class="s"> </span><span class="s">stuff</span><span class="s">,</span><span class="s"> </span><span class="s">assert</span><span class="s">&quot;</span> <span class="o">&amp;&amp;&amp;&amp;</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span>
+<span class="s">&quot;</span><span class="s">go</span><span class="s"> </span><span class="s">somewhere</span><span class="s">,</span><span class="s"> </span><span class="s">do</span><span class="s"> </span><span class="s">some</span><span class="s"> </span><span class="s">stuff</span><span class="s">,</span><span class="s"> </span><span class="s">assert</span><span class="s">&quot;</span> <span class="o">&amp;&amp;&amp;&amp;</span> <span class="k">fun</span> _ <span class="k">-&gt;</span>
     <span class="c">//go somewhere</span>
     <span class="c">//interact with page</span>
     <span class="c">//assert</span>
     ()
-)
 <span class="c">//Or</span>
 <span onmouseout="hideTip(event, 'fs8', 10)" onmouseover="showTip(event, 'fs8', 10)" class="i">wip</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span>
     <span class="c">//go somewhere</span>
@@ -266,17 +254,15 @@ If one test is marked wip, only wip tests are ran. Other tests are skipped.</p>
 <span class="l">11: </span>
 <span class="l">12: </span>
 <span class="l">13: </span>
-<span class="l">14: </span>
 </pre>
 </td>
 <td class="snippet"><pre class="fssnip">
 <span class="c">//skipped</span>
-<span class="s">&quot;</span><span class="s">go</span><span class="s"> </span><span class="s">somewhere</span><span class="s">,</span><span class="s"> </span><span class="s">do</span><span class="s"> </span><span class="s">some</span><span class="s"> </span><span class="s">stuff</span><span class="s">,</span><span class="s"> </span><span class="s">assert</span><span class="s">&quot;</span> <span class="o">&amp;&amp;!</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span>
+<span class="s">&quot;</span><span class="s">go</span><span class="s"> </span><span class="s">somewhere</span><span class="s">,</span><span class="s"> </span><span class="s">do</span><span class="s"> </span><span class="s">some</span><span class="s"> </span><span class="s">stuff</span><span class="s">,</span><span class="s"> </span><span class="s">assert</span><span class="s">&quot;</span> <span class="o">&amp;&amp;!</span> <span class="k">fun</span> _ <span class="k">-&gt;</span>
     <span class="c">//go somewhere</span>
     <span class="c">//interact with page</span>
     <span class="c">//assert</span>
     ()
-)
 <span class="c">//Or</span>
 <span onmouseout="hideTip(event, 'fs9', 11)" onmouseover="showTip(event, 'fs9', 11)" class="i">xtest</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span>
     <span class="c">//go somewhere</span>
